--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right col-sm-6 col-md-5">
                         	<li class="active"><a href="http://kimlou.github.io/portafolioklp">Proyectos <span class="sr-only">(current)</span></a></li>
-                            <li><a href="https://kimlou.github.io/portafolioklp/servicios.html" class="navlink">Servicios</a></li>
-                            <li><a href="https://kimlou.github.io/portafolioklp/sobremi.html" class="navlink">Sobre mi</a></li>
+                            <li><a href="servicios.html" class="navlink">Servicios</a></li>
+                            <li><a href="sobremi.html" class="navlink">Sobre mi</a></li>
                             <li><a href="#" class="navlink">Contacto</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
