--- a/sobremi.html
+++ b/sobremi.html
@@ -66,8 +66,8 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right col-sm-6 col-md-5">
                             <li><a href="http://kimlou.github.io/portafolioklp" class="navlink">Proyectos</a></li>
-                            <li><a href="http://kimlou.github.io/portafolioklp/servicios" class="navlink">Servicios</a></li>
-                            <li class="active"><a href="http://kimlou.github.io/portafolioklp/sobremi" class="navlink">Sobre mi<span class="sr-only">(current)</span></a></li>
+                            <li><a href="servicios" class="navlink">Servicios</a></li>
+                            <li class="active"><a href="sobremi" class="navlink">Sobre mi<span class="sr-only">(current)</span></a></li>
                             <li><a href="#" class="navlink">Contacto</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
