--- a/sobremi.html
+++ b/sobremi.html
@@ -53,7 +53,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="https://kimlou.github.io/portafolioklp"><img alt="Brand KLP" src="img/headericons/logoklp.svg" onmouseover="this.src='img/headericons/logoklphover.svg';" onmouseout="this.src='img/headericons/logoklp.svg';">&nbsp&nbsp&nbspKim López Pizarro</a>
+                        <a class="navbar-brand" href="index.html"><img alt="Brand KLP" src="img/headericons/logoklp.svg" onmouseover="this.src='img/headericons/logoklphover.svg';" onmouseout="this.src='img/headericons/logoklp.svg';">&nbsp&nbsp&nbspKim López Pizarro</a>
                     </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,9 +65,9 @@
                             <li><a href="#" class="col-xs-2"><img src="img/smicons/lb.svg" class="socialicon" onmouseover="this.src='img/smicons/la.svg';" onmouseout="this.src='img/smicons/lb.svg';" alt="Linked In"></a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right col-sm-6 col-md-5">
-                            <li><a href="https://kimlou.github.io/portafolioklp" class="navlink">Proyectos</a></li>
-                            <li><a href="https://kimlou.github.io/servicios" class="navlink">Servicios</a></li>
-                            <li class="active"><a href="https://kimlou.github.io/sobremi" class="navlink">Sobre mi<span class="sr-only">(current)</span></a></li>
+                            <li><a href="index.html" class="navlink">Proyectos</a></li>
+                            <li><a href="servicios.html" class="navlink">Servicios</a></li>
+                            <li class="active"><a href="sobremi.html" class="navlink">Sobre mi<span class="sr-only">(current)</span></a></li>
                             <li><a href="#" class="navlink">Contacto</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
